2003-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c (property_apply): 
	* sol.h: 
	* Makefile.am: 
	* aisleriot.schemas.in: Aisleriot now uses gconf.

	* sol.c (quit_app): Don't ask if quit has been selected. Trust the
	user.

	* menu.h: 
	* sol.c:
	* menu.c: Reorganised the menu and the toolbar so that they match
	each other in terms of order and tooltips. Also give the hint
	toolbar button the "help" lifesaver that all the other games do.
	Added an option to toggle the toolbar on and off.
	
2003-06-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c (show_select_game_dialog): Updates to the select dialog
	to avoid flickering and make resizing behave. Fixes bug #114327.

2003-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.scm: Added a wrapper for eval so it runs on modern guiles
	which actually do what R5RS says while still running on 1.3. Fixes
	bug #114191.

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Removed since it was unused.

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* .cvsignore: Add freecell.desktop.

2003-05-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c (help_about_callback): 
	* dialog.c (show_preferences_dialog): Use gtk_window_present to
	display dialogs.

2003-05-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* plait.scm: 
	* fortunes.scm: 
	* eagle_wing.scm: 
	* sol.scm (get-name): Rather than constructing cards from the suit
	and value do them all individually. This is to help the
	translators. The word "the" has also been moved to the beginning of
	the descriptions rather than the format strings.

2003-05-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* first_law.scm (removable?): More i18n fixes.

	* plait.scm: 
	* fortunes.scm: 
	* eagle_wing.scm: Replaced the case 3 hint with an easier to
	translate case 0 hint.

	* dialog.c (show_hint_dialog): Deprecated case 3 hints since they
	are too hard to translate.
