@@ -2,8 +2,8 @@
   <schemalist>
 
     <schema>
-      <key>/schemas/apps/aisleriot/show-toolbar</key>
-      <applyto>/apps/aisleriot/show-toolbar</applyto>
+      <key>/schemas/apps/aisleriot/show_toolbar</key>
+      <applyto>/apps/aisleriot/show_toolbar</applyto>
       <owner>aisleriot</owner>
       <type>bool</type>
       <default>TRUE</default>
@@ -14,8 +14,8 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/aisleriot/game-file</key>
-      <applyto>/apps/aisleriot/game-file</applyto>
+      <key>/schemas/apps/aisleriot/game_file</key>
+      <applyto>/apps/aisleriot/game_file</applyto>
       <owner>aisleriot</owner>
       <type>string</type>
       <default>klondike.scm</default>
@@ -26,8 +26,8 @@
     </schema>
 
     <schema>
-      <key>/schemas/apps/aisleriot/card-options</key>
-      <applyto>/apps/aisleriot/card-options</applyto>
+      <key>/schemas/apps/aisleriot/card_options</key>
+      <applyto>/apps/aisleriot/card_options</applyto>
       <owner>aisleriot</owner>
       <type>string</type>
       <default>beige.png bonded.png gnome.png bold-09x14.png knuth-09x10.png 
