@@ -1,3 +1,11 @@
+2003-06-06  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* dialog.c
+	* sol.c
+	* menu.c
+	* aisleriot.schemas.in: - -> _ because the spec says we can't use
+	it.
+
 2003-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* dialog.c (property_apply): 
